# autotune

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  server.py
.claude-plugin/: plugin.json
autotune/: __init__.py  workflow.py
commands/: baseline.md  compare-runs.md  dataset-audit.md  debug-run.md  eval.md  experiment.md  export-gguf.md  init-project.md  merge.md  plan-experiments.md  run-dpo.md  run-experiment.md  ship-decision.md  train.md
examples/: dpo-preference-tuning.md  sft-to-gguf.md
scripts/: evaluate_model.py  export_gguf.py  merge_adapter.py  serve_model.py  train_dpo.py  train_model.py
skills/: dataset-preparation.md  evaluation-benchmarks.md  experiment-design.md  experiment-tracking.md  failure-diagnosis.md  hyperparameter-tuning.md  lora-finetuning.md  memory-optimization.md  model-selection.md  release-readiness.md
tests/: test_workflow.py
unsloth_mcp/: project.py
