[project]
name = "unsloth-mcp"
version = "0.3.0"
description = "MCP server and Claude Code plugin for ML R&D workflows — SFT, DPO/ORPO, GGUF export, VRAM estimation"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "trl>=0.8.0",
    "peft>=0.10.0",
    "datasets>=2.18.0",
    "gradio>=4.0.0",
    "tqdm>=4.60.0",
    "bitsandbytes>=0.43.0",
]

[project.optional-dependencies]
tracking = [
    "wandb>=0.16.0",
    "mlflow>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unsloth_mcp"]
